# generators

./: .gitignore  README.md  SPEC.md  ZEN.md  pyproject.toml
src/: utils.py
src/factored/: chain.py  complete.py  independent.py
src/ghmm/: process.py
tests/: test_utils.py  transition_matrices.py
tests/factored/: test_chain.py  test_complete.py  test_independent.py
tests/ghmm/: test_process.py
