[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["generators"]

[project]
name = "generators"
version = "0.1"
description = "generators"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["jax>=0.9.0"]

[project.optional-dependencies]
dev = ["pylint", "pyright", "pytest", "ruff"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "A001",   # builtin-variable-shadowing
    "A004",   # builtin-import-shadowing
    "D100",   # undocumented-public-module
    "D101",   # missing-docstring-in-public-class
    "D102",   # missing-docstring-in-public-method
    "D103",   # missing-docstring-in-public-function
    "D104",   # missing-docstring-in-public-package
    "D105",   # missing-docstring-in-magic-method
    "D107",   # Missing docstring in __init__
    "SIM108", # Use the ternary operator
]
select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "D",   # pydocstyle https://pydocstyle.readthedocs.io/en/latest/error_codes.html
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "PT",  # flake8-pytest-style
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["D"]
"*.ipynb" = ["D"]

[tool.pylint."MESSAGES CONTROL"]
# Disable line-too-long check since ruff handles line length (120 chars)
# C0103 invalid-name: naming convention (variables, etc.)
# W0622 redefined-builtin: allow names like "compile" in project APIs
disable = [
    "line-too-long",
    "duplicate-code",
    "invalid-name",
    "redefined-builtin",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]

[tool.pyright]
typeCheckingMode = "standard"
reportUnnecessaryEllipsis = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
addopts = ["--strict-markers", "--strict-config"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
